compiler/testData/diagnostics/tests/delegatedProperty/missedGetter.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
val a: Int <!DELEGATE_SPECIAL_FUNCTION_MISSING!>by<!> A()

class A
